Fixed minor layout bug

--- a/flex/flex.css
+++ b/flex/flex.css
@@ -39,7 +39,7 @@
 
 .right {
     right: 0;
-    height: 383px;
+    height: calc(100vh - 210px);
     text-align: right;
     padding-right: 20px;
     top: 140px;
